Suppress warnings in dev mode.